# JustNothing-XTCToolBox-Rewrite

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: designer.bat  retranslate.bat
include/algorithm/: big_int.h  tree.h
include/datatypes/: bytearray.h  redirector.h  thread.h
include/emmcdl/: crc.h  diskwriter.h  dload.h  emmcdl.h  ffu.h  firehose.h  partition.h  protocol.h  sahara.h  serialport.h  sparse.h  utils.h  xmlparser.h
include/emmcdl_new/: crc.h  diskwriter.h  dload.h  emmcdl.h  ffu.h  firehose.h  partition.h  protocol.h  sahara.h  serialport.h  sparse.h  targetver.h  utils.h  xmlparser.h
include/spddump/: common.h  spd_cmd.h  spd_dump.h
include/utils/: logger.h  string_utils.h  struct_utils.h  time_utils.h  usb_utils.h
include/widget_ui/: MainWindow.ui
include/widgets/basic/: MyMainWindow.h  MyWidget.h
include/widgets/custom/: MainWindow.h
src/datatypes/: bytearray.cpp  redirector.cpp  thread.cpp
src/emmcdl/: crc.cpp  diskwriter.cpp  dload.cpp  emmcdl.cpp  ffu.cpp  firehose.cpp  partition.cpp  protocol.cpp  sahara.cpp  serialport.cpp  sparse.cpp  utils.cpp  xmlparser.cpp
src/emmcdl_new/: crc.cpp  diskwriter.cpp  dload.cpp  emmcdl.cpp  ffu.cpp  firehose.cpp  partition.cpp  protocol.cpp  sahara.cpp  serialport.cpp  sparse.cpp  utils.cpp  xmlparser.cpp
src/spddump/: BMPlatform.cpp  Wrapper.cpp  common.cpp  spd_dump.cpp
src/utils/: exception_handler.cpp  logger.cpp  string_utils.cpp  time_utils.cpp  usb_utils.cpp
src/widgets/basic/: MyMainWindow.cpp  MyWidget.cpp
